--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -34,14 +34,22 @@
 
 \noindent Response. The paper is relatively long so we decided to intersperse the literature review in the introduction. The first paragraph of the paper actually states what the concrete contribution of our paper is. While you are right that there has been much work on the identifying an estimating the gains from early education, much less is the work on long term outcomes and on life-cycle benefits. Our paper is the first to provide a methodology to forecast life-cycle benefits to estimate rates of return. In fact, by doing so it provides a template to evaluate social programs and not only early childhood education programs. The appropriate comparisons and relevant literature are cited in the introduction. A whole section is devoted to compare out method with ``back-of-the-envelope'' calculations that current papers in the literature employ. We think that this gives a clear idea of what the contribution of our paper is.\\
 
-\noindent \textbf{Editor. I am not really sure that the econometric theory portion (most of section 3, thus) with all its abstract assumptions is all that helpful: parts of it are sloppy (see e.g. main comment 4), part of it are unclear (see e.g. main comment 4 and several minor comments), and parts of it seem to hide rather than illuminate the crucial parts of the analysis (see in particular my main comment 5 below). This should all be much more coherent. Perhaps, for the JPE, one can afford to off-shelve some of the detailed, but ultimately tangential econometric theory formulation to the technical appendix: it sometimes feels like something that got formulated, after the intuition of the general principles were understood (and those would be good to formulate) rather than the other way around. I.e., I am not sure that the formalism will be of much help to any reader, at a first pass. I shall admit, I may have been missing the crucial bit, which you might strongly feel should be part of the main text. But perhaps even then there is a solution of drastically reducing it all to that, while moving the full- fledged version to the technical appendix.}\\
+\noindent \textbf{Editor. I am not really sure that the econometric theory portion (most of section 3, thus) with all its abstract assumptions is all that helpful: parts of it are sloppy (see e.g. main comment 4), parts of it are unclear (see e.g. main comment 4 and several minor comments), and parts of it seem to hide rather than illuminate the crucial parts of the analysis (see in particular my main comment 5 below). This should all be much more coherent. Perhaps, for the JPE, one can afford to off-shelve some of the detailed, but ultimately tangential econometric theory formulation to the technical appendix: it sometimes feels like something that got formulated, after the intuition of the general principles were understood (and those would be good to formulate) rather than the other way around. I am not sure that the formalism will be of much help to any reader, at a first pass. I shall admit, I may have been missing the crucial bit, which you might strongly feel should be part of the main text. But perhaps even then there is a solution of drastically reducing it all to that, while moving the full-fledged version to the technical appendix.}\\
 
 \noindent Response.  We are now only keeping the basic. Having labor income as a ``running example'' allows us to get rid of one of the subindices and sets that we were carrying around---see Equation (1) in page 10. Then, we reduced the number of assumptions to what is absolutely basic to derive the testable implications. The testable implications are very relevant in explaining the intuition of the forecasting as well as how would one take our method to practice in other samples. The whole procedure is now explained in only a few equations.\\
 
-\noindent \textbf{Editor. Page 15 seems to describe a key component of your analysis. You seek to compare, say, whether labor income is different between treated and non- treated, and since you cannot observe that for the people in your sample, you use a synthetic sample for prediction. Fine. But then the key surely is to get the difference between these two groups correctly, i.e., that the two synthetic groups of the auxiliary sample differ by ideally exactly as much as they would if we were to follow the original two groups. Page 15 talks much about predicting future incomes, but we don?t care much about the level itself: we care much more about the difference between these two groups. There is little said to assure the reader that one gets the right answer for that difference. The background variables will be the same for the treated and untreated, for example. So how, exactly, does the difference in treatment show up in the synthetic groups? Just the development of labor income until the observable age? That might be fine, but then clearly say so. Something else? This needs to be a lot clearer and a lot more convincing. You may be resolving this eventually in (3). It is unclear there, however, whether you want all the characteristics of the synthetic group to be the same or just for the one specific j, which you are seeking to forecast in (1). To me, it makes more sense that they are all the
+\noindent \textbf{Editor. Page 15 seems to describe a key component of your analysis. You seek to compare, say, whether labor income is different between treated and non- treated, and since you cannot observe that for the people in your sample, you use a synthetic sample for prediction. Fine. But then the key surely is to get the difference between these two groups correctly, i.e., that the two synthetic groups of the auxiliary sample differ by ideally exactly as much as they would if we were to follow the original two groups. Page 15 talks much about predicting future incomes, but we don't care much about the level itself: we care much more about the difference between these two groups. There is little said to assure the reader that one gets the right answer for that difference.}\\
+
+\noindent Response. That is correct, as we express in pg.\ 17, one could get by with the difference. We rely on the stronger conditions of predicting in levels both the treatment and the control because these provides us with additional testable implications---Equations (5) and (6) in pg.\ 17---in which our method performs very well.\\
+
+\noindent \textbf{The background variables will be the same for the treated and untreated, for example. So how, exactly, does the difference in treatment show up in the synthetic groups?  Just the development of labor income until the observable age? That might be fine, but then clearly say so. Something else?}\\
+
+\noindent Response. It shows up because there are two \text{different} types of predictors: $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call outcomes up to age a). The key assumption for obtaining our forecasts is actually that $\bm{X}_{k,a}^d$ summarizes the treatment effect that the program could have on $Y_{k,a}^d$. Any treatment-control difference in the outcomes of interest arises from a treatment-control difference in $\bm{X}_{k,a}$ (as dictated by the function $\phi$). These points are clearly disguised in the list of steps in page 11.\\
+
+\noindent \textbf{This needs to be a lot clearer and a lot more convincing. You may be resolving this eventually in (3). It is unclear there, however, whether you want all the characteristics of the synthetic group to be the same or just for the one specific j, which you are seeking to forecast in (1). To me, it makes more sense that they are all the
 same (if possible: is it? Comment on that!).}\\
 
-\noindent Response.\\
+\noindent Response. We now thoroughly comment on this in Section 3.1, where we detail the construction of the synthetic cohorts. As you point out, it makes more sense to construct one synthetic control group and one synthetic treatment group for doing the analysis across all of the outcomes. That is what we do.\\
 
 \noindent \textbf{Editor. Connected to that: I found assumption A-1 on page 18 mystifying. It may actually unfortunate that you ``suppress individual i subscripts'' to ``avoid notational clutter'', as you state on p. 16. I thought that the explanation on page 15 and (3) meant, that you take each individual of your actual sample and ``match him/her'' up with someone in the auxiliary sample, who has the exact same vector of characteristics Y until age a* (which then raises a bunch of questions: what, if there are many in the artificial data that do the trick? What, if there are none?). So, you then would have an auxiliary sample, that looks like your experimental sample, but where you can observe everything until the end of their lives. If that is what you do, then A-1 is not an assumption: it is a definition of the auxiliary sample. And if that is not the definition, then exactly what is the definition? In any case, assumption A-2 on p.21 states some support condition. It would seem to me that this is a necessary condition to even construct the auxiliary sample, as defined by ``assumption'' A-1. Perhaps you mean something else, but this should all be crystal clear. Moreover, the selection of variables is really key. Suppose you include cohort information in the regressors in (1): then, assumption A-2 would be impossible to satisfy. There is too much crucial information here, swept under the rug of apparently clean formalism.}\\
 
@@ -63,9 +71,22 @@ same (if possible: is it? Comment on that!).}\\
 
 \noindent Response. This sentence has actually been edited out.\\
 
-\noindent \textbf{Editor. P.9. Given that you make advertisement for these programs, it surely is important to understand well what these programs do, without overloading the reader with information. On page 9 you say, ``Both have two phases, the first of which lasts from birth until age 5. ... The second phase of the study consists of child academic support through home visits from ages 5 through 8. The first phase of CARE, from birth until age 5, has an additional treatment arm of home visits designed to improve home environments.'' You point to appendix A and to García et al (2017) for more information, but I feel, more ought to be said here about the substance of the program. Among the items of interest: one would like to know what ``portion'' is particularly costly, how much it costs and why.}\\
+\noindent \textbf{Editor. P.9. Given that you make advertisement for these programs, it surely is important to understand well what these programs do, without overloading the reader with information. On page 9 you say, ``Both have two phases, the first of which lasts from birth until age 5. ... The second phase of the study consists of child academic support through home visits from ages 5 through 8. The first phase of CARE, from birth until age 5, has an additional treatment arm of home visits designed to improve home environments.'' You point to appendix A and to \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} for more information, but I feel, more ought to be said here about the substance of the program. Among the items of interest: one would like to know what ``portion'' is particularly costly, how much it costs and why.}\\
 
-\noindent Response.\\
+\noindent Response. Section 2 does describe the main ingredients and Section 4.4 expands on the cost of each of the annual components of the costs. We do not think it is convenient to elaborate further on this in the main text. But the following table (Table B.1 in the Appendix) expands on the costs. As it is usual in these programs, teaching is the most expensive input. Note from Appendix B that we went back to the primary sources (even invoices) to be able to compute these costs.\\
+
+\begin{table}[H]
+\centering
+\begin{threeparttable}
+\caption{Yearly Program Costs, ABC/CARE} \label{tab:totalcosts}
+\footnotesize
+\input{output/programcosts}
+\begin{tablenotes}
+\footnotesize
+\item Note: This table summarizes the yearly costs for ABC/CARE. They are based on primary-source documentation describing ABC. We assume that the costs for ABC and CARE were the same based on conversations with programs' staff \citep{projectcare2014interviews,abc2014-2015interviews}. \\
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
 
 \noindent \textbf{Editor. P. 10, ``Randomization for ABC/CARE was conducted on child pairs matched on family characteristics. Siblings and twins were jointly randomized into either treatment or control groups. Randomization pairing was based on the childhood risk index, maternal education, maternal age, and gender of the subject.'' I don?t know what that means. Perhaps it is good that I am an outsider here. Was this randomization done by the programs themselves? I.e., did they sort children into pairs, so that both had similar family backgrounds, and then flipped a coin on who got admitted? What does ``joint randomization'' mean? Does it mean, either all siblings got in or they didn?t? If this is true for siblings, why is it important to then mention twins in particular? Aren?t twins siblings? I understand that siblings aren?t twins, but somehow, that sentence threw me off. Etc.. Please make sure this is all crystal clear, even to outsiders like me.}\\
 
@@ -79,7 +100,7 @@ same (if possible: is it? Comment on that!).}\\
 
 \noindent Response. This has been rephrased (page 10, first two paragraphs). Both $R$ takes $1$ if the child is randomizes to treatment and $0$ if she is randomized to control. $D$ is $1$ if the child complies to the treatment status (i.e.,\ the parents comply to what the randomization protocol indicates). $R$ and $D$ are \textit{ex-ante} different: The former is a not a decision and the latter is.\\
 
-\noindent \textbf{Editor. P. 11: The first sentence of the paragraph ``Individuals ...'' should need one or several extra words at the end to make it proper English. Perhaps you mean ``... variables B satisfy B 2 B0 .''? Would it be important to say more aboutB0.''? Itshowsuplater,whenconstructingsyntheticcomparison groups (p. 15), so perhaps at least there it would be good to discuss it more.}\\
+\noindent \textbf{Editor. P. 11: The first sentence of the paragraph ``Individuals ...'' should need one or several extra words at the end to make it proper English.}\\
 
 \noindent Response. We have clarified that $\mathcal{B}_0$ is the et of scores on the risk index that determines program eligibility (pg. 10). Eligibility and the index are discussed in Section 2 as part of the description of the program. The index is spelled out on footnote 15., and then summarizes in detail in Appendix A2.\\
 
@@ -223,19 +244,19 @@ same (if possible: is it? Comment on that!).}\\
 
 \noindent \textbf{Referee 3. How do you choose predictor variables? It needs to be able to predict a treatment effect, and so the predictor variable should be affected by treatment. I might be wrong but it doesn't look like you are using the subsample of predictors that are affected by treatment? Why not? Why does it make sense to include predictor variables not affected by treatment?}\\
 
-\noindent Response.\\
+\noindent Response. As detailed in pg.\ 10, there are predictors not affected by treatment, $\bm{B}_k$, and predictors affected by treatment, $\bm{X}_{k,a}^d$. The former allow us to gain precision when identifying and estimating $\phi$ in the auxiliary samples. We choose them to be the set of variables that are available across the two samples and are available at baseline in the experimental sample. The latter are the most important ones, as our whole methodology relies on them as ``mediators'' of treatment. That is precisely what is embedded in Assumption A-2. As detailed in pg.\ 11, a variable is a predictor variables: (i) are availlable in the experimental and the non-experimental data; (ii) the support in the non- experimental data contains the support in the experimental data; (iii) mediate or cause labor income; and (iv) are affected by treatment. Section 3.2 documents that these holds for the intermediate inputs that we use.\\
 
 \noindent \textbf{Referee 3. What, if any, restrictions are there on the joint distribution of the predicted outcomes in a given period? Are, say, high earners also more likely to be healthy? What are the cross-equation restrictions in the forecasts?}\\
 
-\noindent Response.\\
+\noindent Response. This is an excellent point that we cannot attack practically.\\ 
 
 \noindent \textbf{Referee 3. Please clarify why one needs a randomized experiment if one is willing to make the assumptions you invoke (such as exogeneity of the predictor variables and structural invariance)? Why not just go to observational data where we can observe long-run outcomes and have a larger set of covariates to do the matching. What economic model or assumptions would invalidate such a matching procedure (which motivates why you look at social experiments), yet still be consistent with the assumptions you invoke? The paper should be clear about this.}\\
 
-\noindent Response.\\
+\noindent Response. We believe that the new exposition of the methodology has clarified this. By assuming that treatment is mediated by $\bm{X}_{k,a}^d$ the treatment-control differences in any outcomes of interest will result from the treatment-control difference in $\bm{X}_{k,a}^d$ (as dictated by the structural function $\phi$). One could think of doing this non-parametrically and that is exactly what we discuss in Section 3.6.\\
 
 \noindent \textbf{Referee 3. The importance of essentially heterogeneity is a key insight of other work by Heckman and coauthors. Please discuss your assumptions and approaches in light of this evidence. Does the presence of essential heterogeneity in a wide range of settings tell us something of the applicability of the methods you propose in this paper?}\\
 
-\noindent Response.\\
+\noindent Response. We appreciate this point, but, again, we are limited by practicalities in this regard. To bring up a serious discussion in our paper about essential heterogeneity, we would need to allow for heterogeneous responses to treatment. In our small-sample experiment, this proves impossible. We approximate a complex reality by providing estimate of the average treatment effect of the program, and statistics related to it, for the population for which $\bm{B} \in \mathcal{B}_0$, assuming a homogenous response.\\
 
 
 
