--- a/output/raw-rosenbaum-table-age-exp_editedTvC.tex
+++ b/output/raw-rosenbaum-table-age-exp_editedTvC.tex
@@ -1,20 +1,22 @@
 % matrix: COMBINE file: raw-rosenbaum-table.tex  10 May 2018 09:03:15
 
-\begin{tabular}{lcclcc} 
+\begin{tabular}{lcccc} 
 \toprule
- \textbf{(a) Childhood} & Females & Males & \textbf{(b) School Age}  & Females & Males \\
- \cmidrule(lr){2-3} \cmidrule(lr){5-6}
-\quad Avg. Effect Size &     0.392 &     0.259 				&  \quad Avg. Effect Size &     0.531 &     0.297 \\  
-\quad \% Positive &    95.833 &    75.000 				&	  \quad \% Positive &   100.000 &   100.000 \\  
-\quad \% Significant &    45.833 &    29.167 			& \quad \% Significant  &    55.556 &    11.111 \\  
-\quad $p$-value &     \textbf{0.086} &     \textbf{0.086} 	&  \quad $p$-value &     \textbf{0.022} &     0.147 \\  
+ & \mc{2}{c}{\textbf{(a) Childhood}}   & \mc{2}{c}{\textbf{(b) School Age}}  \\
+ & Females & Males & Females & Males \\
+ \cmidrule(lr){2-3}  \cmidrule(lr){4-5}
+\quad Avg. Effect Size &     0.392 &     0.259 &     0.531 &     0.297 \\  
+\quad \% Positive &    95.833 &    75.000 	&	   100.000 &   100.000 \\  
+\quad \% Significant &    45.833 &    29.167 &    55.556 &    11.111 \\  
+\quad Rosenbaum $p$-value &     \textbf{0.086} &     \textbf{0.086} 	&       \textbf{0.022} &     0.147 \\  
  \midrule
-  \textbf{(c) Adult} &Females & Males  & \textbf{(d) All}  &Females & Males  \\
-   \cmidrule(lr){2-3} \cmidrule(lr){5-6}
-\quad Avg. Effect Size &     0.291 &     0.227 						& \quad Avg. Effect Size&     0.381 &     0.254 \\  
-\quad \% Positive &    88.889 &    72.222 				&  \quad \% Positive  &    94.118 &    78.431 \\  
-\quad \% Significant &    33.333 &    16.667 			&  \quad \% Significant &    43.137 &    21.569 \\  
-\quad $p$-value &     \textbf{0.010} &     \textbf{0.086} 	&  \quad $p$-value &     \textbf{0.010} &     \textbf{0.086} \\  
+ & \mc{2}{c}{\textbf{(c) Adult}}   & \mc{2}{c}{\textbf{(d) All}}  \\
+ & Females & Males & Females & Males \\
+  \cmidrule(lr){2-3}  \cmidrule(lr){4-5}
+\quad Avg. Effect Size &     0.291 &     0.227 						&     0.381 &     0.254 \\  
+\quad \% Positive &    88.889 &    72.222 				&    94.118 &    78.431 \\  
+\quad \% Significant &    33.333 &    16.667 			&    43.137 &    21.569 \\  
+\quad Rosenbaum $p$-value &     \textbf{0.010} &     \textbf{0.086} 	&       \textbf{0.010} &     \textbf{0.086} \\  
 \bottomrule
 \end{tabular}
 
